force-app/main/default/objects/Quote_Template__c/Quote_Template__c.object-meta.xml
<CustomObject>
    <label>Quote Template</label>
    <nameField>
        <label>Quote Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>