force-app/main/default/objects/Quote_Template__c/fields/BottomCoverImage_Name__c.field-meta.xml
<CustomField>
    <fullName>BottomCoverImage_Name__c</fullName>
    <label>BottomCoverImage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>