force-app/main/default/objects/Quote_Template__c/fields/Showcase_Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Showcase_Image_Name__c</fullName>
    <label>Showcase Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>