force-app/main/default/objects/Quote_Template__c/fields/Template_Theme_Color__c.field-meta.xml
<CustomField>
    <fullName>Template_Theme_Color__c</fullName>
    <label>Template Theme Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>